--- a/main.html
+++ b/main.html
@@ -4,9 +4,36 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<p>
+		<ol type="1" value="shoppingList">
+			<li>car</li>
+			<li>iphone</li>
+			<li>building</li>
+		</ol>
+
+	<ul type="disc" value="holidayList">
+		<li>manali</li>
+		<li>kasol</li>
+		<li>leh ladakh</li>
+	</ul>
+	
+	</p>
+
 </head>
 
 <body>
+	<!--	<ol>
+		<li data-ns-test = "shoppingList">Car</li>
+		<li data-ns-test = "shoppingList">Iphone</li>
+		<li data-ns-test = "shoppingList">House</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test = "holidayList">Gujrat</li>
+		<li data-ns-test = "holidayList">Goa</li>
+		<li data-ns-test = "holidayList">Kashmir</li>
+	</ul>
+-->
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
